--- a/leehyunsoo/exam_478.ipynb
+++ b/leehyunsoo/exam_478.ipynb
@@ -65,10 +65,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def func_478(count, array):\n",
+    "    assert count >= 0\n",
+    "    assert count == len(array)\n",
+    "    \n",
+    "    if count == 0:\n",
+    "        return (0, 0)\n",
+    "    S = sum(array)\n",
+    "    A = sum(array) / count\n",
+    "    return (S, A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert func_478(0, []) == (0, 0)\n",
+    "assert func_478(1, [1]) == (1, 1)\n",
+    "assert func_478(1, [8]) == (8, 8)\n",
+    "assert func_478(3, [1, 2, 3]) == (6, 2)"
+   ]
   },
   {
    "cell_type": "code",
