--- a/leehyunsoo/exam_484.ipynb
+++ b/leehyunsoo/exam_484.ipynb
@@ -100,6 +100,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def change_word2(array):\n",
+    "    return \"\".join(['_' + x.lower() if x.isupper() or x.isdigit() else x for x in array])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert change_word2(\"numGoat30\") == \"num_goat_3_0\"\n",
+    "assert change_word2(\"codingDojang\") == \"coding_dojang\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
