--- a/leehyunsoo/exam_488.ipynb
+++ b/leehyunsoo/exam_488.ipynb
@@ -67,6 +67,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 8}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set([1, 2, 3, 8, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func_488(digit_array):\n",
+    "    if len(digit_array) != 10:\n",
+    "        return False\n",
+    "    return len(digit_array) == len(set(digit_array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert func_488('') == False\n",
+    "assert func_488('0123456789') == True\n",
+    "assert func_488('01234') == False\n",
+    "assert func_488('01234567890') == False\n",
+    "assert func_488('6789012345') == True\n",
+    "assert func_488('012322456789') == False"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
