--- a/leehyunsoo/exam_505.ipynb
+++ b/leehyunsoo/exam_505.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "temp = [x for x in range(10,16)]\n",
     "total=[]\n",
-    "num=[100,110]\n",
+    "num=[100,110]\n\n",
     "for i in range(len(num)):\n",
     "    for y in range(len(str(num[i]))):\n",
     "        total+=[str(num[i])[y]]\n",
