--- a/leehyunsoo/exam_490.ipynb
+++ b/leehyunsoo/exam_490.ipynb
@@ -94,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert perfomance_ratio(part_perfomance) == perfomance_ratio2(part_perfomance,part_price)"
+    "def "
    ]
   },
   {
@@ -102,7 +102,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "assert perfomance_ratio(part_perfomance) == perfomance_ratio2(part_perfomance,part_price)"
+   ]
   }
  ],
  "metadata": {
