--- a/leehyunsoo/exam_490.ipynb
+++ b/leehyunsoo/exam_490.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,8 +69,8 @@
     }
    ],
    "source": [
-    "CONST_PRICE = 10 #asdf\n",
-    "CONST_PERFOMANCE = 150 #asdf\n",
+    "CONST_PRICE = 10 \n",
+    "CONST_PERFOMANCE = 150 \n",
     "part_price = 3\n",
     "part_perfomance = [30,70,60,40,65]\n",
     "\n",
@@ -90,11 +90,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "def func_490(perfomance, price):\n",
+    "        \n",
+    "    array = [ind if (CONST_PERFOMANCE / CONST_PRICE ) < ind / price else 0 for ind in perfomance]\n",
+    "    count = [1 if (CONST_PERFOMANCE / CONST_PRICE ) < ind / price else 0 for ind in perfomance]\n",
+    "        \n",
+    "    return int((sum(array) + CONST_PERFOMANCE)/(sum(count)*3 + CONST_PRICE))\n",
+    "\n",
+    "print(func_490(part_perfomance,part_price))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def "
+    "assert perfomance_ratio2([30,70,60,40,65],3) == func_490([30,70,60,40,65],3)\n",
+    "assert perfomance_ratio2([30,70,60,40,65],6) == func_490([30,70,60,40,65],6)\n",
+    "assert perfomance_ratio2([30,70,60,80,65],2) == func_490([30,70,65,60,80],2)"
    ]
   },
   {
@@ -102,9 +128,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "assert perfomance_ratio(part_perfomance) == perfomance_ratio2(part_perfomance,part_price)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
