--- a/leehyunsoo/exam_492.ipynb
+++ b/leehyunsoo/exam_492.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -97,19 +97,22 @@
    ],
    "source": [
     "def printO2(n):    \n",
-    "    result=[(\"O\"*(n-row) + \"X\"*row )for row in range(1,n+1)]\n",
-    "    return result\n",
+    "    return [(\"O\"*(n-row) + \"X\"*row )for row in range(1,n+1)]\n",
     "\n",
     "print(\"\\n\".join(printO2(n)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert printO(n) == printO2(n)"
+    "assert printO(6) == printO2(6)\n",
+    "assert printO(1) == printO2(1)\n",
+    "assert printO(2) == printO2(2)\n",
+    "assert printO(3) == printO2(3)\n",
+    "assert printO(4) == printO2(4)"
    ]
   },
   {
