--- a/leehyunsoo/exam_492.ipynb
+++ b/leehyunsoo/exam_492.ipynb
@@ -68,18 +68,18 @@
     }
    ],
    "source": [
-    "def printO(n):\n",
+    "def printO1(n):\n",
     "    result=[]\n",
     "    for row in range(1,n+1):\n",
     "        result+=[\"O\"*(n-row)+\"X\"*row]\n",
     "    return result\n",
     "\n",
-    "print(\"\\n\".join(printO(n)))"
+    "print(\"\\n\".join(printO1(n)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -104,15 +104,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert printO(6) == printO2(6)\n",
-    "assert printO(1) == printO2(1)\n",
-    "assert printO(2) == printO2(2)\n",
-    "assert printO(3) == printO2(3)\n",
-    "assert printO(4) == printO2(4)"
+    "assert printO1(6) == printO2(6)\n",
+    "assert printO1(1) == printO2(1)\n",
+    "assert printO1(2) == printO2(2)\n",
+    "assert printO1(3) == printO2(3)\n",
+    "assert printO1(4) == printO2(4)"
    ]
   },
   {
