--- a/leehyunsoo/exam_493.ipynb
+++ b/leehyunsoo/exam_493.ipynb
@@ -150,50 +150,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1', '1', '1']\n",
-      "[['1', '1', '1'], ['1', '1', '1']]\n"
+      "3.1 > 2.2\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[['1', '1', '1'], ['1', '1', '1']]"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def func_493(version01):\n",
+    "def func_493(version01,version02):\n",
+    "    \n",
+    "    result = [['0' for x in range(3-len(version01.split('.'))) if len(version01.split('.'))<3 ]  + [ ind for ind in version01.split('.')]] +[['0' for x in range(3-len(version02.split('.'))) if len(version02.split('.'))<3 ]  + [ ind for ind in version02.split('.')]]\n",
     "\n",
-    "    print(version01.split('.'))\n",
+    "    if result[0][0] <= result[1][0] :\n",
+    "        if result[0][1] <= result[1][1] :\n",
+    "            if result[0][2] > result[1][2] :\n",
+    "                return '>'\n",
+    "            elif result[0][2] == result[1][2] :\n",
+    "                return '=='\n",
+    "            else :\n",
+    "                return '<'\n",
+    "        else :\n",
+    "            return '>'\n",
+    "    else : \n",
+    "        return '>'\n",
     "    \n",
-    "    result = [['0' for x in range(3-len(version01.split('.'))) if len(version01.split('.'))<3 ]  + [ ind for ind in version01.split('.')]] +[['0' for x in range(3-len(version01.split('.'))) if len(version01.split('.'))<3 ]  + [ ind for ind in version01.split('.')]]\n",
-    "    \n",
-    "    print(result)\n",
-    "    return result\n",
-    "func_493('1.1.1')"
+    "print('3.1',func_493('3.1','2.2'),'2.2')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert func_493('0.0.0','0.0.0') == ['0','0','0']\n",
-    "assert func_493('1.0') == ['0','1','0']\n",
-    "assert func_493('10.0.0') == ['10','0','0']\n"
+    "assert func_493('0.0.0','0.0.0') == '=='\n",
+    "assert func_493('1','2') == '<'\n",
+    "assert func_493('10.0.0','0.0.0') == '>'\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
