--- a/leehyunsoo/exam_493.ipynb
+++ b/leehyunsoo/exam_493.ipynb
@@ -150,21 +150,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.1 > 2.2\n"
+      "1.1 > 2.0\n"
      ]
     }
    ],
    "source": [
     "def func_493(version01,version02):\n",
     "    \n",
-    "    result = [['0' for x in range(3-len(version01.split('.'))) if len(version01.split('.'))<3 ]  + [ ind for ind in version01.split('.')]] +[['0' for x in range(3-len(version02.split('.'))) if len(version02.split('.'))<3 ]  + [ ind for ind in version02.split('.')]]\n",
+    "    result = [['0' for x in range(3-len(version01.split('.'))) if len(version01.split('.'))<3 ]  + [ ind for ind in version01.split('.')]] + [['0' for x in range(3-len(version02.split('.'))) if len(version02.split('.'))<3 ]  + [ ind for ind in version02.split('.')]]\n",
     "\n",
     "    if result[0][0] <= result[1][0] :\n",
     "        if result[0][1] <= result[1][1] :\n",
@@ -179,17 +179,29 @@
     "    else : \n",
     "        return '>'\n",
     "    \n",
-    "print('3.1',func_493('3.1','2.2'),'2.2')"
+    "print('1.1',func_493('1.1','2.0'),'2.0')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-b7b906df2cb1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mfunc_493\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'0.0.0'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'0.0.0'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'=='\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mfunc_493\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'1.0'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'2.0'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'<'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mfunc_493\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'10.0.0'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'0.0.0'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'>'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "assert func_493('0.0.0','0.0.0') == '=='\n",
-    "assert func_493('1','2') == '<'\n",
+    "assert func_493('1.0','2.0') == '<'\n",
     "assert func_493('10.0.0','0.0.0') == '>'\n"
    ]
   },
