--- a/yoon/08_478.ipynb
+++ b/yoon/08_478.ipynb
@@ -2,30 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'input_count' is not defined",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-30-9a14a23f90cf>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-314748817a2c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplus_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mcal_count\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_count\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'input_count' is not defined"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-30-9a14a23f90cf>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for l in count int l=input():\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "# input_count = input()\n",
-    "def cal_count(input_count):\n",
-    "    plus_data =0\n",
-    "    for i in range(int(input_count)):\n",
-    "        plus_data += int(input())\n",
-    "    print(plus_data)    \n",
-    "\n",
-    "cal_count(input_count)"
+    "def count_fun (count):\n",
+    "    for l in count  l=input():\n",
+    "        S = sum(loop)\n",
+    "        A = sum(loop)/count\n",
+    "    \n",
+    "    return (S,A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "assert count_fun(3,[1,2,3]) == (6,2)"
    ]
   }
  ],
