3월 14일 1차 피드백

--- a/yoon/11_490.ipynb
+++ b/yoon/11_490.ipynb
@@ -7,8 +7,8 @@
    "outputs": [],
    "source": [
     "def fun_490(S):\n",
-    "    count =[S[i] for i in range(len(S)) if S[i] / 3 > 15]\n",
-    "    return int((sum(count) + 150)/(len(count) * 3 + 10))"
+    "    part_prof_over_original_eff = [S[i] for i in range(len(S)) if S[i] / 3 > 15]\n",
+    "    return int((sum(part_prof_over_original_eff) + 150)/(len(part_prof_over_original_eff) * 3 + 10))"
    ]
   },
   {
@@ -40,6 +40,13 @@
     "assert fun_490([30,70,15,40,65]) == 17\n",
     "assert fun_490([80,70,15,40,65]) == 19"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
