--- a/yoon/12_492.ipynb
+++ b/yoon/12_492.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -32,6 +32,50 @@
    "source": [
     "bitcal(6) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bit_cal(n):\n",
+    "    result = []\n",
+    "    for i in range(n):\n",
+    "        result.append('O' * (n-i-1) + ('X' * (i+1)))\n",
+    "    print(result)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['OX', 'XX']\n",
+      "['OOX', 'OXX', 'XXX']\n",
+      "[]\n",
+      "['X']\n"
+     ]
+    }
+   ],
+   "source": [
+    "assert bit_cal(2) == ['OX', 'XX']\n",
+    "assert bit_cal(3) == ['OOX', 'OXX', 'XXX']\n",
+    "assert bit_cal(0) == []\n",
+    "assert bit_cal(1) == ['X']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
